--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
 
   <main class="container">
     <h1 class="title">Send USDT</h1>
+    <!-- Simple version indicator so you can confirm latest deployment -->
+    <p style="font-size: 11px; color: #6b7280; margin-top: 4px; margin-bottom: 16px;">
+      Build: <strong>telegram-backend-main / v3</strong>
+    </p>
 
     <label class="label" for="address">Address or Domain Name</label>
     <div class="input-group address-input-group" style="display: flex !important; align-items: center !important; border-radius: 12px !important; padding: 12px 14px !important; margin-bottom: 16px !important; min-height: 48px !important; max-height: 48px !important; box-sizing: border-box !important; gap: 8px;">
